--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
-    "@vercel/speed-insights": "^1.0.12",
+    "@vercel/speed-insights": "latest",
     "allotment": "^1.19.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
